Updated menu to use provided png icons, fixed scrollbar issues and some resizing issues

--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -13,12 +13,13 @@
 
 * {
 	min-width: 0;
-	min-height: 0%;
+	min-height: 0;
 }
 
-#menu-bar {
-	display: inline-block;
-	height: 40px;
+#main_toolbar {
+	display: flex;
+	overflow: hidden;
+	height: 35px;
 	background-color: white;
 	min-width: 800px;
 	width: 100%;
@@ -26,28 +27,13 @@
 	border-bottom: 1px black solid;
 }
 
-#menu-bar #last-button
+#main_toolbar .toolbar_item
 {
-	float: right;
-}
-
-#menu-bar>.btn-group-lg {
-	float: left;
-	height: 100%;
-	vertical-align: middle;
-}
-
-#menu-bar .menu-group 
-{
+	border-right: 1px black solid;
 	height: 100%;
 }
 
-
-#menu-bar>.btn-group-lg> .btn:last-child{
-	border-right-width: 1px;
-}
-
-#menu-bar .btn
+#main_toolbar button
 {
 	border-radius: 0px;
 	border-width: 0px;
@@ -58,70 +44,6 @@
 	font-size: 13px;
 	padding-right: 5px;
 	padding-left: 5px;
-}
-
-#menu-bar .glyphicon:before {
-  color: white;
-  padding: 3px 5px;
-  margin-right: 2px;
-  border-radius: 6px;
-}
-
-#menu-bar .glyphicon-arrow-left:before {
-  background-color: green;
-}
-
-#menu-bar .glyphicon-arrow-right:before {
-  background-color: orange;
-}
-
-#menu-bar .glyphicon-save:before {
-  background-color: orange;
-}
-
-#menu-bar .glyphicon-record:before {
-  background-color: #2c9e9e;
-}
-
-#menu-bar .glyphicon-search:before {
-  background-color: #2c9e9e;
-}
-
-#menu-bar .glyphicon-remove:before {
-  background-color: red;
-}
-
-#menu-bar .glyphicon-eye-open:before {
-  background-color: green;
-}
-
-#payload-dropdown
-{
-	float: left;
-	padding-top: 6px;
-	margin: 0 10px;
-}
-
-#behaviour-dropdown
-{
-	float: left;
-	padding-top: 6px;
-}
-
-#menu-bar p
-{
-	float: left;
-	height: 25px;
-	margin-left: 20px;
-	margin-right: 5px;
-	padding-top: 12px;
-	text-align: center;
-}
-
-#menu-bar #coap-button
-{
-	float: right;
-	height: 100%;
 }
 
 #content .wrapper
@@ -136,14 +58,14 @@
 {
 	position: absolute;
 	width: 100%;
-	top: 40px;
+	top: 35px;
 	bottom: 0;
 	background-color: white;
 	text-align: left;
 }
 
 
-#top-wrapper{
+#top_wrapper{
 	display: flex;
 	position: relative;
 	background-color: green;
@@ -151,9 +73,6 @@
 	flex-direction: column;
 }
 
-#top-container{
-	background-color: yellow;
-}
 
 .flex {
 	flex: 1;
@@ -167,14 +86,6 @@
 .hbox {
 	display: flex;
 	flex-direction: row;
-}
-
-.box-label{
-	padding: 6px;
-	padding-left: 8px;
-	padding-bottom: 0;
-	margin: 0;
-	font-size: 12px;
 }
 
 
@@ -220,7 +131,29 @@ legend {
 	background-color: white;
 }
 
+#packet_header p
+{
+	padding-left: 4px;
 
+}
+
+#packet_options
+{
+	padding-bottom: 1px;
+}
+
+#packet_options p
+{
+	padding-left: 4px;
+}
+
+#packet_header p:nth-child(1) {
+    width: 50px;
+}
+
+#packet_header  p:nth-child(2){
+    width: 150px;
+}
 
 #packet_options
 {
@@ -229,11 +162,22 @@ legend {
 	background-color: white;
 }
 
-#packet_options table
-{
-	display: block;
-	height: 100%;
-	width: 100%;
+#packet_options p:nth-child(1) {
+    display: inline-block;
+    flex-direction: column;
+    flex: 2;
+}
+
+#packet_options  p:nth-child(2){
+    display: inline-block;
+    flex-direction: column;
+    flex: 7;
+}
+
+#packet_options p:nth-child(3){
+    display: inline-block;
+    flex-direction: column;
+    flex: 1;
 }
 
 #message_pane th, td
@@ -241,14 +185,14 @@ legend {
 	padding:0 5px;
 }
 
-#tabbed-pane-payload
+#tabbed_pane_payload
 {
 	overflow-y: auto;
 	width: 100%;
 	height: 100%;
 }
 
-#tabbed-pane-payload p
+#tabbed_pane_payload p
 {
 
 	margin: 0; 
@@ -264,6 +208,16 @@ legend {
 	margin-bottom: 5px;
 }
 
+#sidebar .btn
+{
+	border-radius: 5px;
+	border-width: 0px;
+	border-width: 1px;
+	background-color: white;
+	border-color: white;
+	color: black;
+}
+
 #sidebar .checkbox 
 {
 	margin-bottom: 0;
@@ -276,8 +230,6 @@ legend {
 	text-align: left;
 }
 
-
-
 #sidebar .checkbox p {
 	margin: 0;
 	padding-top: 2px;
@@ -289,19 +241,10 @@ legend {
 	margin-top: 5px;
 }
 
-#sidebar .btn
+#reset_button
 {
-	border-radius: 0px;
-	border-width: 0px;
-	border-color: black;
-	background-color: white;
-	color: black;
-}
-
-#reset-button
-{
-	border-radius: 5px;
-	border-width: 0px;
+	border-radius: 4px;
+	border-width: 1px;
 	border-color: black;
 	background-color: white;
 	color: black;
@@ -357,9 +300,9 @@ legend {
 	color: white;
 }
 
-#sidebar-block-size > div
+#sidebar_block_size > div
 {
-	margin-left: 6px;
+	margin-left: 5px;
 }
 
 #chk_debug_option_block_auto {
@@ -369,29 +312,49 @@ legend {
 
 #log_messages {
 	background-color: white;
-	margin: 4px;
 	border: 1px solid;
-	padding: 4px;
+	padding-bottom: 1px;
 }
 
-#log_messages .table-head {
-	height: 25px;
+#log_messages p {
+	padding-left: 4px;
 }
-#log_messages .table-head p{
+
+.table-head {
+	min-height: 18px;
+	height: 18px;
+	background-color: #aaa;
+}
+.table-head p {
 	margin: 0;
 	padding: 0;
+	margin-right: 5px;
 	font-weight: bold;
 	display: inline-block;
 }
 
-#log_messages .table-body-row {
+.table-body-row {
 	display: flex;
 }
 
-#log_messages .table-body-row p{
+.table-body-row p {
 	margin: 0;
 	padding: 0;
+	margin-right: 5px;
 	display: inline-block;
+	overflow: hidden;
+}
+
+#packet_options p:nth-child(1) {
+    flex: 3.5;
+}
+
+#packet_options  p:nth-child(2){
+	flex: 5.5 1;
+}
+
+#packet_options p:nth-child(3){
+    flex: 1;
 }
 
 #log_messages p:nth-child(1) {
